--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -31,16 +31,14 @@
 
       </ul>
    </li>
-       {% endif %} 
-       {% if is_granted ('ROLE_MANAGER_LYON') %} 
 
-   <li><a href="#">Tableau Manager</a>  
+   <li><a href="#">Tableau Lyon</a>  
       <ul>
+   
+         <li><a href="#">Liste-Inscrits</a></li>
          <li><a href="#">Liste-Sympathisants</a></li>
          <li><a href="#">Liste-Adherent</a></li>
-         <li><a href="#">Total Abonnement</a></li>
-         <li><a href="#">Total dons</a></li>
-         <li><a href="#">Total vente</a></li>
+         <li><a href="#">Liste-Bureau</a></li>
        
       </ul>
    </li>
