insertion de new

--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -34,8 +34,8 @@
 
    <li><a href="#">Tableau Lyon</a>  
       <ul>
-   
-         <li><a href="#">Liste-Inscrits</a></li>
+         {# "{{ path('tablelyon_new') }}" #}
+         <li><a href="{{ path('tablelyon_new') }}">Enregistrement</a></li>
          <li><a href="#">Liste-Sympathisants</a></li>
          <li><a href="#">Liste-Adherent</a></li>
          <li><a href="#">Liste-Bureau</a></li>
