--- a/templates/tablelyon/index.html.twig
+++ b/templates/tablelyon/index.html.twig
@@ -14,6 +14,7 @@
                 <th>Username</th>
                 <th>Email</th>
                 <th>Roles</th>
+                <th>Titre</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -26,6 +27,7 @@
                 <td>{{ tablelyon.username }}</td>
                 <td>{{ tablelyon.email }}</td>
                 <td>{{ tablelyon.roles }}</td>
+                <td>{{ tablelyon.titre }}</td>
                 <td>
                     <a href="{{ path('tablelyon_show', {'id': tablelyon.id}) }}">show</a>
                     <a href="{{ path('tablelyon_edit', {'id': tablelyon.id}) }}">edit</a>
