ajout fonction technique

--- a/templates/cotisation/formdon.html.twig
+++ b/templates/cotisation/formdon.html.twig
@@ -6,7 +6,7 @@
 <form action="" method="POST">
 <p><h2>Je fais un don</h2></p>
 {# <label> Nombre de mois</label> #}
-<label Je donne la somme de:</label>
+<label> Je donne la somme de:</label>
 <select name="amountun">
     <option value="">--Please choisir une option--</option>
     <option value="500">Cinq euros = 5€</option>
