--- a/templates/cotisation/traitement_stripe.html.twig
+++ b/templates/cotisation/traitement_stripe.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CotisationController!{% endblock %}
+{% block title %}CotisationController!{% endblock %}
 
 {% block body %}
 <p><h3>PAIEMENT CARTE BLEUE (€) en euro </h3></p>
