--- a/templates/cotisation/traitement_stripecarte.html.twig
+++ b/templates/cotisation/traitement_stripecarte.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Abonnement Paiement!{% endblock %}
+{% block title %}CartePaiement!{% endblock %}
 
 {% block body %}
 <p><h3>PAIEMENT CARTE BLEUE (€) en euro </h3></p>
 
-<form action="paiement_abonnement" method="POST">
+<form action="paiement_carte" method="POST">
 <input type ='hidden' name='amountrois' value = {{ amountdeux }}> </input>
         <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -13,7 +13,7 @@
         data-key="pk_live_CRM6aOQ11RfcncXdqX8jKYpB"
         data-amount = {{ amountdeux}}
         data-name="Front Populaire Ivoirien"
-        data-description="Je fais un don"
+        data-description="Je paie ma carte d'adhesion"
         data-image="{{ asset('assets/img/logofpi.png') }}"
         data-locale="auto"
         data-currency="eur"
