--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -48,6 +48,7 @@
       <ul>
          <li><a href="#">Liste-Sympathisants</a></li>
          <li><a href="#">Liste-Adherents</a></li>
+         <li><a href="{{ path('user_commandecarte') }}">Liste-Cde-carte</a></li>
          <li><a href="{{ path('user_makeCarte') }}">Liste-Total</a></li>
          <li><a href="#">Paiements adhesions</a></li>
          <li><a href="#">Paiements dons</a></li>
