--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -2,71 +2,79 @@
 
 <ul id="menu-accordeon">
    <li><a href="#">REPRESENTATION</a>
-      <ul>
-         <li><a href="#">Bureau</a></li>
-      </ul>
+            <ul>
+               <li><a href="#">Bureau</a></li>
+            </ul>
    </li>
-    <li><a href="#">Etre sympathisant</a>
-     <li><a href="#">Don sympathisant</a>
-      <ul>
-         <li><a href="{{ path('cotisation_formdon') }}">Dons</a></li>
-      </ul>
+   <li><a href="#">Etre sympathisant</a>
+   <li><a href="#">Don sympathisant</a>
+            <ul>
+               <li><a href="{{ path('cotisation_formdon') }}">Dons</a></li>
+            </ul>
    </li>
-    <li><a href="#">Devenir Adhérent</a>
+   <li><a href="#">Devenir Adhérent</a>
       <ul>
          <li><a href="{{ path('adhesion_new') }}">Formulaire d'adhésion</a></li>
-          {% if is_granted ('ROLE_ADHERENT') %}
+      </ul>   
+         {% if is_granted ('ROLE_ADHERENT') %}
+      <ul>
          <li><a href="{{ path('adhesion_edituser') }}">Mon profil</a></li>
          <li><a href="{{ path('adhesion_newUpload') }}">Demande de carte</a></li>
          <li><a href="{{ path('adhesion_viewUpload') }}">Voir ma photo </a></li>
-          {% endif %}
       </ul>
    </li>
-       {% if is_granted ('ROLE_ADHERENT') %} 
 	<li><a href="#">Cotisations</a>
       <ul>
          <li><a href="{{ path('cotisation_formCarte') }}">Paiement Carte Adhesion</a></li>
          <li><a href="{{ path('cotisation_formPaiement') }}">Mensuelle/annuel</a></li>
          <li><a href="{{ path('cotisation_formdon') }}">Dons</a></li>
          <li><a href="{{ path('count_attestation') }}">Attestation de paiement</a></li>
-
       </ul>
    </li>
-
+         {% endif %}
+{% if is_granted ('ROLE_MANAGER_LYON') %}
    <li><a href="#">Tableau Lyon</a>  
       <ul>
          {# "{{ path('count_makeCarte') }}" #}
          <li><a href="{{ path('tablelyon_new') }}">Enregistrement</a></li>
          <li><a href="{{ path('tablelyon_index') }}">Liste-Section-Lyon-I</a></li>
          <li><a href="{{ path('tablelyon_bureau') }}">Liste-Bureau</a></li>
-       
       </ul>
    </li>
-       {# {% if is_granted ('ROLE_ADMIN') %}          #}
+{% endif %}
+{% if is_granted ('ROLE_ADMIN') %}
 
    <li><a href="#">Tableau Admin</a>  
       <ul>
-         <li><a href="#">Liste-Sympathisants</a></li>
+         <li><a href="{{ path('user_listesympa') }}">Liste-Total</a></li>
          <li><a href="#">Liste-Adherents</a></li>
-         <li><a href="{{ path('user_commandecarte') }}">Liste-Cde-carte</a></li>
-         <li><a href="{{ path('user_makeCarte') }}">Liste-Total</a></li>
+         <li><a href="{{ path('user_makeCarte') }}">Liste-Sympathisants</a></li>
          <li><a href="#">Paiements adhesions</a></li>
          <li><a href="#">Paiements dons</a></li>
          <li><a href="#">Paiements ventes</a></li>{# <li><a href="{{ path('envoiesms_general') }}">Communications</a></li> #}
- 
       </ul>
    </li>
+{% endif %}
+
+{% if is_granted ('ROLE_TECHNIQUE') %}
      <li><a href="#">Tableau Technique</a>  
       <ul>
-         <li><a href="#">Création-Adherents</a></li>
+         <li><a href="{{ path('user_commandecarte') }}">Liste-Cde-carte</a></li>
       </ul>
    </li>
-      {% endif %}
+{% endif %}
 
    <li><a href="#">Mot de Pass</a>
       <ul>
          <li><a href="{{ path('mdpupdate') }}">Remplacez</a></li>
       </ul>
    </li>
+{% if is_granted ('ROLE_SUPER_ADMIN') %}
+   <li><a href="#">Super-Admin</a>  
+      <ul>
+         <li><a href="#">maj-roles</a></li>
+      </ul>
+   </li>
+{% endif %}
  
 </ul>
