--- a/templates/adhesion/_formUpdateAdhesion.html.twig
+++ b/templates/adhesion/_formUpdateAdhesion.html.twig
@@ -43,14 +43,19 @@
 {{ form_errors(form.numberIdentity) }}
 </div>
 <div class="form-group">
-{{ form_label(form.norue, 'N° Rue') }}
-{{ form_widget(form.norue, {'attr':{'class':'form-control'}}) }}
-{{ form_errors(form.norue) }}
+{{ form_label(form.voie, 'Nature de la voie') }}
+{{ form_widget(form.voie, {'attr':{'class':'form-control'}}) }}
+{{ form_errors(form.voie) }}
 </div>
 <div class="form-group">
-{{ form_label(form.nomrue, 'Nom Rue') }}
-{{ form_widget(form.nomrue, {'attr':{'class':'form-control'}}) }}
-{{ form_errors(form.nomrue) }}
+{{ form_label(form.novoie, 'N° de la voie') }}
+{{ form_widget(form.novoie, {'attr':{'class':'form-control'}}) }}
+{{ form_errors(form.novoie) }}
+</div>
+<div class="form-group">
+{{ form_label(form.nomvoie, 'Nom de la voie') }}
+{{ form_widget(form.nomvoie, {'attr':{'class':'form-control'}}) }}
+{{ form_errors(form.nomvoie) }}
 </div>
 <div class="form-group">
 {{ form_label(form.ville, 'Ville') }}
