--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -46,12 +46,12 @@
 
    <li><a href="#">Tableau Admin</a>  
       <ul>
-         <li><a href="{{ path('user_listesympa') }}">Liste-Total</a></li>
+         <li><a href="{{ path('user_listetotal') }}">Liste-Total</a></li>
          <li><a href="#">Liste-Adherents</a></li>
          <li><a href="{{ path('user_makeCarte') }}">Liste-Sympathisants</a></li>
-         <li><a href="#">Paiements adhesions</a></li>
-         <li><a href="#">Paiements dons</a></li>
-         <li><a href="#">Paiements ventes</a></li>{# <li><a href="{{ path('envoiesms_general') }}">Communications</a></li> #}
+         <li><a href="{{ path('user_paiementadherent') }}">Paiements adhesions</a></li>
+         <li><a href="{{ path('user_paiementdon') }}">Paiements dons</a></li>
+         <li><a href="{{ path('user_paiementvente') }}">Paiements ventes</a></li>{# <li><a href="{{ path('envoiesms_general') }}">Communications</a></li> #}
       </ul>
    </li>
 {% endif %}
