--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -73,6 +73,7 @@
    <li><a href="#">Super-Admin</a>  
       <ul>
          <li><a href="#">maj-roles</a></li>
+         <li><a href="{{ path('user_addroles') }}">creer un role</a></li>
       </ul>
    </li>
 {% endif %}
