--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -47,7 +47,7 @@
    <li><a href="#">Tableau Admin</a>  
       <ul>
          <li><a href="{{ path('user_listetotal') }}">Liste-Total</a></li>
-         <li><a href="#">Liste-Adherents</a></li>
+         <li><a href="{{ path('user_listeadherent') }}">Liste-Adherents</a></li>
          <li><a href="{{ path('user_makeCarte') }}">Liste-Sympathisants</a></li>
          <li><a href="{{ path('user_paiementadherent') }}">Paiements adhesions</a></li>
          <li><a href="{{ path('user_paiementdon') }}">Paiements dons</a></li>
