--- a/templates/admin/listemajroles.html.twig
+++ b/templates/admin/listemajroles.html.twig
@@ -29,8 +29,8 @@
                 <td>{{ user.roles ? user.roles|join(', ') : '' }}</td>
                 <td>{{ user.adhesion.id }}</td>
                 <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    {# <a href="{{ path('user_show', {'id': user.id}) }}">show</a> #}
+                    <a href="{{ path('user_updatemajroles', {'id': user.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+    {# <a href="{{ path('user_new') }}">Create new</a> #}
 {% endblock %}
