--- a/templates/admin/listeadherent.html.twig
+++ b/templates/admin/listeadherent.html.twig
@@ -9,20 +9,9 @@
 				<h4>FRONT  POPULAIRE  IVOIRIEN</h4>        
 				<h6>Représentation FPI-FRANCE</h6>        
 			</div>
-
 <caption class="well well-sm"><h2> Liste de tous les adhérents du site FPI</h2></caption>
-
     <table>
-      {% dump(adhesions) %} 
-         {% dump(listusers) %}
-      
     {% if listusers %}
-                {# <td class="well well-sm">{{ count.ref }}</td> #}
-       
-            
-    
-  
-
          {% for user in listusers  %}
               {% if user.roles[0] == "ROLE_ADHERENT" %}
             <tr>
@@ -35,16 +24,15 @@
                 <th class="well">Naissance </th>
                 <th class="well">lieu naiss </th>
                 <th class="well">Profession </th>
-                <th class="well">N° rue </th>
-                <th class="well">Nom rue </th>
+                <th class="well">voie </th>
+                <th class="well">N° voie </th>
+                <th class="well">Nom voie </th>
                 <th class="well">Nom ville </th>
                 <th class="well">Nom pays </th>
                 <th class="well">code postale </th>
                 <th class="well">Photo </th>
             </tr>
-
-         <tr> 
-         {# {{ user.id }} #}
+         <tr>
                 <td class="well well-sm">{{ user.id | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.gender | default("") }}</td>
                 <td class="well well-sm">{{ user.username  | default("") }}</td>
@@ -54,33 +42,24 @@
                 <td class="well well-sm">{{ user.adhesion.birthday | default("") | date('d-m-Y')  }}</td>
                 <td class="well well-sm">{{ user.adhesion.lieunaissance  | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.profession  | default("") }}</td>
-                <td class="well well-sm">{{ user.adhesion.norue  | default("") }}</td>
-                <td class="well well-sm">{{ user.adhesion.nomrue  | default("") }}</td>
+                <td class="well well-sm">{{ user.adhesion.voie  | default("") }}</td>
+                <td class="well well-sm">{{ user.adhesion.novoie  | default("") }}</td>
+                <td class="well well-sm">{{ user.adhesion.nomvoie  | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.ville  | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.pays  | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.codepostale  | default("") }}</td>
-                {# <td class="well well-sm">{{ user.adhesion.image.id | default("") }}</td> #}
-            {# <img style="margin:15px" width="120" src='{{ asset('assets/images/' ~ user.adhesion.image) }}' #}
-
                 <td> <img style="margin:15px" width="120" src='{{ asset('assets/images/' ~ user.adhesion.image | default("")) }}'></td>
          </tr>
          {% else %}
          Aucune personne avec ce role n'existe .
         {% endif %}  
-        
-
          {% endfor %}
-
-
-           
     {% else %}
    Aucune personne ne s'est enregistré sur le site.
 {% endif %}
-         
     </table>  
 </u>
 </div>
 <a href="{{ '/' }}"><p><h4><span class="label label-success">Retour</span></h4></p></a>
-
 </div>
 {% endblock %} 
