--- a/templates/admin/listesuperadmin.html.twig
+++ b/templates/admin/listesuperadmin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste dons{% endblock %}
+{% block title %}Liste complete{% endblock %}
 
 {% block body %}
  <div class="well">
@@ -9,9 +9,12 @@
 				<h4>FRONT  POPULAIRE  IVOIRIEN</h4>        
 				<h6>Représentation FPI-FRANCE</h6>        
 			</div>
-<caption class="well well-sm"><h2> Liste des dons reçus</h2></caption>
+<caption class="well well-sm"><h2> Liste de tous les adhérents du site FPI</h2></caption>
     <table>
-    {% if counts %}
+    {% if listusers %}
+         {% for user in listusers  %}
+              {# {% if user.roles[0] == "ROLE_ADHERENT" %} #}
+              {% if user.roles[0] == "ROLE_SUPER_ADMIN" %}
             <tr>
                 <th class="well">id:</th>
                 <th class="well">Sex:</th>
@@ -30,8 +33,7 @@
                 <th class="well">code postale </th>
                 <th class="well">Photo </th>
             </tr>
-         {% for user in listusers  %}
-         <tr> 
+         <tr>
                 <td class="well well-sm">{{ user.id | default("") }}</td>
                 <td class="well well-sm">{{ user.adhesion.gender | default("") }}</td>
                 <td class="well well-sm">{{ user.username  | default("") }}</td>
@@ -49,9 +51,12 @@
                 <td class="well well-sm">{{ user.adhesion.codepostale  | default("") }}</td>
                 <td> <img style="margin:15px" width="120" src='{{ asset('assets/images/' ~ user.adhesion.image | default("")) }}'></td>
          </tr>
+         {% else %}
+         Aucune personne avec ce role n'existe .
+        {% endif %}  
          {% endfor %}
     {% else %}
-   Aucun don n'a été enregistré.
+   Aucune personne ne s'est enregistré sur le site.
 {% endif %}
     </table>  
 </u>
