--- a/templates/security2/forgetpass.html.twig
+++ b/templates/security2/forgetpass.html.twig
@@ -1,7 +1,8 @@
 {% extends  'base.html.twig' %}
 {% block body %}
 <h2> Mot de pass oublié ?: </h2>
-
+<h4>USERNAME = votre n°telephone au format international.<h4>
+<h4>Entrez votre Username et vous recevrez par sms un  mot de pass provisoire.<h4>
 {{ form(formUser) }}
 
 {% endblock %}
