--- a/templates/security2/rolemodifdeuxv2.html.twig
+++ b/templates/security2/rolemodifdeuxv2.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
-<h2> modifdeux role: </h2>
-<h4>Veullez entrer un utilisateur.<h4>
+<h2> modifdeux V2: </h2>
+<h4>Veullez entrer un role.<h4>
 {# {{ form_start(formUser, { attr: {novalidate: 'novalidate'} }) }} #}
 {{ form_start(formUser) }}
 
