--- a/templates/menu-accordeon.html.twig
+++ b/templates/menu-accordeon.html.twig
@@ -76,8 +76,7 @@
       <ul>
       
       {# {{ path('admin_majroles') }} #}
-         <li><a href="{{ path('rolemodification') }}">test 1 role</a></li>
-         <li><a href="{{ path('rolemodifun') }}">test 2 role</a></li>
+         <li><a href="{{ path('rolemodifun') }}">Modif roles</a></li>
          <li><a href="{{ path('envoiesms_lwssmssignature') }}">Test SMS LWS</a></li>
          <li><a href="{{ path('envoiesms_smspartnersignature') }}">Test smspartner</a></li>
       </ul>
