refonte front page accueil

--- a/templates/admin/listesuperadmin.html.twig
+++ b/templates/admin/listesuperadmin.html.twig
@@ -9,7 +9,7 @@
 				<h4>FRONT  POPULAIRE  IVOIRIEN</h4>        
 				<h6>Représentation FPI-FRANCE</h6>        
 			</div>
-<caption class="well well-sm"><h2> Liste de tous les adhérents du site FPI</h2></caption>
+<caption class="well well-sm"><h2> Liste des super administrateurs du site FPI</h2></caption>
     <table>
     {% if listusers %}
          {% for user in listusers  %}
