--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,8 +27,8 @@
                   </div>
 								  <div class="col-lg-9 col-md-9 col-sm-9 ">
 									  <h1>FRONT  POPULAIRE  IVOIRIEN</h1>        
-									  <h3>Représentation FPI-FRANCE METROPOLITAINE</h3>        
-									  <h5>(Pendant cette 1ère phase de test, les inscriptions sont ouvertes uniquement aux lyonnais)</h5>        
+									  <h2>République de Côte d'Ivoire</h2>        
+									  <h5>(Ce site est en essai. Merci de votre compréhension)</h5>        
 								  </div>
 						</div>
 {% endblock logo %}
