--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,7 +15,7 @@
  <iframe class= "img-fluid" alt= "Responsive image" src="https://www.youtube.com/embed/0eUFOmadBFk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
  </p>
  {% else %}
-        <div> <img src="{{ asset('assets/img/xpubfpi.jpg') }}"  class= "img-fluid" alt= "Responsive image"></div> 
+        <div> <img src="{{ asset('assets/img/im_accueiljpeg.png') }}"  class= "img-fluid" alt= "Responsive image"></div> 
  
  {% endif %} 
 {% endblock %}
